# monkeys-world

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  todo.md
enc_temp_folder/98d4cb0c37aecb993e9b3a8e86a3827/: AudioBufferOgg.cpp
include/: Font.hpp  Layer.hpp  Paint.hpp  todo.md
include/_stb_libs/: stb_vorbis.h
include/audio/: AudioBuffer.hpp  AudioBufferOgg.hpp  AudioBufferPacket.hpp  AudioManager.hpp
include/audio/exception/: PortAudioException.hpp
include/critter/: Camera.hpp  Collidable.hpp  Context.hpp  ContextUpdate_.hpp  Empty.hpp  GameCamera.hpp  GameObject.hpp  Model.hpp  Object.hpp  SkyBox.hpp  Skybox.hpp  UIObject.hpp  Visitor.hpp  WindowContext.hpp
include/critter/ui/: FPSCounter.hpp  UIButton.hpp  UIGroup.hpp  UIImage.hpp  UIObject.hpp  Window.hpp
include/critter/ui/layout/: BoundingBox.hpp  Margin.hpp  MarginSize.hpp  UILayoutParams.hpp
include/critter/visitor/: ActiveCameraFindVisitor.hpp  LightVisitor.hpp  SpotLightMapVisitor.hpp
include/engine/: BaseEngine.hpp  Context.hpp  EngineContext.hpp  EngineExecutor.hpp  EngineWindow.hpp  Executor.hpp  RenderContext.hpp  Scene.hpp  SceneSwap.hpp
include/file/: AudioLoader.hpp  CacheStreambuf.hpp  CachedFileLoader.hpp  CachedLoader.hpp  CubeMapLoader.hpp  FileLoader.hpp  FontLoader.hpp  LoaderThreadPool.hpp  ModelLoader.hpp  TextureLoader.hpp
include/file/exception/: FileNotFoundException.hpp
include/font/: FTLibWrapper.hpp  Font.hpp  Text.hpp  TextFormat.hpp  TextObject.hpp  UITextObject.hpp
include/font/exception/: BadFontPathException.hpp
include/input/: ClickListener.hpp  Cursor.hpp  EventManager.hpp  KeyListener.hpp  MouseEvent.hpp  WindowEventManager.hpp
include/layer/: Layer.hpp  Layer2D.hpp  LayerGroup.hpp
include/model/: FullscreenQuad.hpp  Mesh.hpp  VertexDataContext.hpp  VertexDataContextGL.hpp
include/opengl/: VertexDataContext.hpp  VertexDataContextGL.hpp
include/render/: RenderContext.hpp  Renderer.hpp
include/shader/: Canvas.hpp  CubeMap.hpp  FilterSequence.hpp  Framebuffer.hpp  GLDebugSetup.hpp  InvalidShaderException.hpp  LinkFailedException.hpp  Material.hpp  ShaderProgram.hpp  ShaderProgramBuilder.hpp  Texture.hpp  UninitializedShaderException.hpp
include/shader/color/: Gradient.hpp
include/shader/exception/: InvalidShaderException.hpp  InvalidTexturePathException.hpp  LinkFailedException.hpp  UninitializedShaderException.hpp
include/shader/light/: Light.hpp  LightDataTemp.hpp  LightTypes.hpp  SpotLight.hpp
include/shader/materials/: ButtonMaterial.hpp  FillMaterial.hpp  ImageFilterMaterial.hpp  MatteMaterial.hpp  ShadowMapMaterial.hpp  SkyBoxMaterial.hpp  SkyboxMaterial.hpp  TextMaterial.hpp  TextureXferMaterial.hpp  UIGroupMaterial.hpp
include/storage/: VertexData.hpp  VertexPacketTypes.hpp
include/utils/: FileUtils.hpp  IDGenerator.hpp  ObjectGraph.hpp
resources/glsl/button-material/: button-material.frag  button-material.vert
resources/glsl/fill-mat/: fill-mat.frag  fill-mat.vert
resources/glsl/image-filter/: image-filter-material.frag  image-filter-material.vert
resources/glsl/matte-material/: matte-material.frag  matte-material.vert
resources/glsl/shadow-map/: shadow-map.frag  shadow-map.vert
resources/glsl/skybox-material/: skybox-material.frag  skybox-material.vert
resources/glsl/text-material/: text-material.frag  text-material.vert
resources/glsl/texture-xfer/: texture-xfer.frag  texture-xfer.vert
resources/glsl/ui-group-mat/: ui-group-mat.frag  ui-group-mat.vert
resources/test/: dummy-shader.frag  dummy-shader.vert
src/: Font.cpp  Layer.cpp  Paint.cpp
src/_stb_libs/: stb_vorbis.c
src/audio/: AudioBuffer.cpp  AudioBufferOgg.cpp  AudioManager.cpp
src/critter/: Context.cpp  GameCamera.cpp  GameObject.cpp  Model.cpp  Object.cpp  Skybox.cpp  UIObject.cpp  Visitor.cpp
src/critter/ui/: FPSCounter.cpp  UIButton.cpp  UIGroup.cpp  UIImage.cpp  UIObject.cpp
src/critter/visitor/: ActiveCameraFindVisitor.cpp  LightVisitor.cpp
src/engine/: BaseEngine.cpp  Context.cpp  EngineContext.cpp  EngineExecutor.cpp  EngineWindow.cpp  RenderContext.cpp  Scene.cpp  SceneSwap.cpp
src/file/: AudioLoader.cpp  CacheStreambuf.cpp  CachedFileLoader.cpp  CubeMapLoader.cpp  FileLoader.cpp  FontLoader.cpp  LoaderThreadPool.cpp  ModelLoader.cpp  TextureLoader.cpp
src/font/: Font.cpp  Text.cpp  TextObject.cpp  UITextObject.cpp
src/input/: ClickListener.cpp  Cursor.cpp  KeyListener.cpp  WindowEventManager.cpp
src/layer/: Layer.cpp  Layer2D.cpp  LayerGroup.cpp
src/model/: FullscreenQuad.cpp  Mesh.cpp
src/shader/: Canvas.cpp  CubeMap.cpp  FilterSequence.cpp  Framebuffer.cpp  ShaderProgram.cpp  ShaderProgramBuilder.cpp  ShaderProgramFactory.cpp  Texture.cpp
src/shader/color/: Gradient.cpp
src/shader/light/: Light.cpp  SpotLight.cpp
src/shader/materials/: ButtonMaterial.cpp  FillMaterial.cpp  ImageFilterMaterial.cpp  MatteMaterial.cpp  ShadowMapMaterial.cpp  SkyBoxMaterial.cpp  SkyboxMaterial.cpp  TextMaterial.cpp  TextureXferMaterial.cpp  UIGroupMaterial.cpp
src/storage/: VertexPacketTypes.cpp
src/utils/: FileUtils.cpp  IDGenerator.cpp  ObjectGraph.cpp
test/: ActiveCameraFindVisitorTest.cpp  AudioBufferOggTest.cpp  AudioBufferTest.cpp  CacheFileLoaderTest.cpp  CacheStreambufTest.cpp  EngineExecutorTest.cpp  EventManagerTest.cpp  FontLoaderTest.cpp  GameObjectTest.cpp  GradientTest.cpp  IDGeneratorTest.cpp  LightVisitorTest.cpp  LoaderThreadPoolTest.cpp  MeshTest.cpp  ModelLoaderTest.cpp  ObjectGraphTest.cpp  ShaderCompilationTest.cpp  SimpleFileLoader.hpp  TextureLoaderTest.cpp  VertexDataTest.cpp
test/demos/: FontDoubleFeature.cpp  SceneTest.cpp  SimpleMatTest.cpp  SimpleModelTest.cpp
